# maldump

./: .flake8  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  other.md
.github/workflows/: build.yml  publish.yml
maldump/: __main__.py  av_manager.py  constants.py  structures.py  types.py  utils.py
maldump/avs/: __init__.py  avast.py  avg.py  avira.py  eset.py  forticlient.py  gdata.py  kaspersky.py  malwarebytes.py  mcafee.py  quarantine.py  windef.py
maldump/parsers/: __init__.py  avast_parser.py  avg_parser.py  avira_parser.py  eset_parser.py  forticlient_parser.py  gdata_parser.py  kaspersky_parser.py  malwarebytes_parser.py  mcafee_parser.py  windef_entries.py  windef_parser.py  windef_resource_data.py
maldump/parsers/kaitai/: avira_parser.ksy  avira_parser.py  eset_ndf_parser.ksy  eset_ndf_parser.py  eset_virlog_parser.ksy  eset_virlog_parser.py  forticlient_parser.ksy  forticlient_parser.py  gdata_parser.ksy  gdata_parser.py  windef_entries.ksy  windef_entries.py  windef_resource_data.ksy  windef_resource_data.py
test/: test_maldump.py
test/root/$AV_ASW/$VAULT/: vault.db
test/root/$AV_AVG/$VAULT/: vault.db
test/root/Program Files/Fortinet/FortiClient/quarantine/: QuarantFile29503db7_2172
test/root/ProgramData/AVG/Antivirus/chest/: index.xml
test/root/ProgramData/Avast Software/Avast/chest/: index.xml
test/root/ProgramData/Avira/Antivirus/INFECTED/: 7372ec3d.qua
test/root/ProgramData/G Data/AVK/Quarantine/: 180122064819413FA3B80.q
test/root/ProgramData/Kaspersky Lab/Kaspersky Security for Windows Server/11.0/Quarantine/: quarantine.db  {98571591-f30d-453e-b6ed-6ff2cf218344}
test/root/ProgramData/Malwarebytes/MBAMService/Quarantine/: bcd0b1ad-04d1-11ec-92be-080027e6e559.data  bcd0b1ad-04d1-11ec-92be-080027e6e559.quar
test/root/ProgramData/Microsoft/Windows Defender/Quarantine/Entries/: {80008A1B-0000-0000-7065-3EA2B161B275}
test/root/ProgramData/Microsoft/Windows Defender/Quarantine/ResourceData/F7/: F7054EAE579A87B7DE9B39B7E0C7ACBDF0C8FBC8
test/root/Users/IEUser/AppData/Local/ESET/ESET Security/Quarantine/: 3395856CE81F2B7382DEE72602F798B642F14140.NQF
