[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
dynamic = ["version"]
name = "maldump"
description = "Multi-quarantine extractor"
authors = [
    {name = "Erik Kuna, Jež Dominik, Jonáš Novotný, Nikola Knežević"},
]
dependencies = [
    "colorama==0.4.6",
    "defusedxml==0.7.1",
    "kaitaistruct==0.10",
    "pycryptodome==3.18.0",
    "types-colorama==0.4.15.12",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "GPLv3"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/NUKIB/maldump"
"Bug Tracker" = "https://github.com/NUKIB/maldump/issues"

[tool.pdm.version]
source = "file"
path = "maldump/__main__.py"

[project.scripts]
maldump = "maldump.__main__:main"

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.6.8",
    "mypy>=1.4.1",
    "typing>=3.7.4.3",
]

[tool.pdm]
distribution = true

[tool.ruff]
exclude = ["maldump/parsers/kaitai"]

[tool.ruff.lint]
select = ["E", "F", "B", "UP", "SIM", "I"]