[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
dynamic = ["version"]
name = "maldump"
description = "Multi-quarantine extractor"
authors = [
    {name = "Erik Kuna, Jež Dominik, Jonáš Novotný, Nikola Knežević"},
]
dependencies = [
    "colorama==0.4.6",
    "defusedxml==0.7.1",
    "kaitaistruct==0.10",
    "arc4==0.4.0",
    "types-colorama==0.4.15.12",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "GPLv3"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/NUKIB/maldump"
"Bug Tracker" = "https://github.com/NUKIB/maldump/issues"

[tool.pdm.version]
source = "file"
path = "maldump/__main__.py"

[project.scripts]
maldump = "maldump.__main__:main"

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.6.8",
    "mypy>=1.11.1",
    "typing>=3.7.4.3",
]

[tool.pdm]
distribution = true

[tool.ruff]
exclude = ["maldump/parsers/kaitai"]

[tool.ruff.lint]
# TODO: N, ANN, DTZ
select = [
    "E",
    "F",
    "W",
    "C90",
    "I",
    "UP",
    "YTT",
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "C4",
    "T10",
    "EM",
    "FA",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "PYI",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PL",
    "TRY",
    "FLY",
    "PERF",
    "FURB",
    "RUF",
]
ignore = [
    "ANN101", # self does not need annotation
    "ANN102", # cls does not need annotation
    "S324", # md5 is provided as output and not used as a security measure
    "PLE0605", # pylint wrongly detects the type
    "ISC001", # we use ruff format which recommends disabling this
]
