[metadata]
name = maldump
version = attr: maldump.__main__.__version__
author = Erik Kuna, Nikola Knežević
description = Multi-quarantine extractor
license = GPLv3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NUKIB/maldump
project_urls =
    Bug Tracker = https://github.com/NUKIB/maldump/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Security
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
python_requires = >=3.6
install_requires =
    colorama
    defusedxml
    kaitaistruct
    pycryptodome
